# pyableton

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  evasiva.als  genindex.html  getting_started.html  index.html  main.py  objects.inv  parse_xml.py  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  test.mid  test.midi  test.xml  version.py
.doctrees/: environment.pickle  getting_started.doctree  index.doctree
.doctrees/classes/: ableton.doctree  ableton_component.doctree  clip_timeable.doctree  follow_action.doctree  grid.doctree  index.doctree  live_set.doctree  midi.doctree  mixer.doctree  scene.doctree  sequencer.doctree  track.doctree
.github/: pull_request_template.md
.github/workflows/: docs.yml  pr.yml  precommit.yml  publish.yml  pypi.yml  pytest.yml  setup.yml
_sources/classes/: ableton_component.rst.txt  grid.rst.txt  mixer.rst.txt  track.rst.txt
classes/: ableton.html  ableton_component.html  clip_timeable.html  follow_action.html  grid.html  index.html  live_set.html  midi.html  mixer.html  scene.html  sequencer.html  track.html
data/uncalled-for-eternal-rest/: Uncalled for the eternal rest.als  (+2 more)
scripts/: als_to_drum_score.py
src/: Ableton.py  AutoColorPickerForPlayerAndGroupTracks.py  AutoColorPickerForReturnAndMasterTracks.py  AutoQuantisation.py  ContentLane.py  CuePointsListWrapper.py  DetailClipKeyMidi.py  ExpressionLane.py  GlobalQuantisation.py  Grid.py  GroovePool.py  LinkedTrackGroups.py  LiveSet.py  Locator.py  MasterTrack.py  MidiTrack.py  PreHearTrack.py  ReturnTracksListWrapper.py  ScaleInformation.py  Scene.py  ScenesListWrapper.py  SendsPre.py  SequencerNavigator.py  SignalModulations.py  SongMasterValues.py  TimeSelection.py  TracksListWrapper.py  Transport.py  VideoWindowRect.py  ViewStates.py  VisibleTracksListWrapper.py
test/: evasiva.xml  test.als  test_ableton.py  test_live12.py
(+65 files in other folders)
